@@ -24,14 +24,14 @@
  <Action name="config"/>
  <Action name="wizard"/>
  <Separator />
- <Action name="piechart"/>
+ <Action name="barschart"/>
  <Action name="linechart"/>
  <Action name="areaschart"/>
- <Action name="barschart"/>
  <Action name="hilochart"/>
+ <Action name="bwchart"/>
+ <Action name="piechart"/>
  <Action name="ringchart"/>
  <Action name="polarchart"/>
- <Action name="bwchart"/>
 </ToolBar>
 <Menu name="action_popup">
  <Action name="config"/>
